# indie_studio

./: .gitignore  .start.sh  CMakeLists.txt  README.md  install.sh
.data/: kevin
assets/: .map1
include/: Assets.hpp  Bomb.hpp  Character.hpp  Core.hpp  Cursor.hpp  Event.hpp  Exception.hpp  FileNotFoundException.hpp  Game.hpp  Map.hpp  Menu.hpp  Object.hpp  Sounds.hpp  saveData.hpp
src/: Assets.cpp  Bomb.cpp  Character.cpp  Core.cpp  Cursor.cpp  Event.cpp  Exception.cpp  FileNotFoundException.cpp  Game.cpp  Map.cpp  Menu.cpp  Object.cpp  Sounds.cpp  main.cpp  saveData.cpp
tmp/: Makefile
